Housekeeping--- removing depreciated files and updating the anagram maker. 	modified:   .DS_Store 	modified:   anag_stats_/.DS_Store 	modified:   anag_stats_/MakingAnagrams/anagram_utils.py 	modified:   anag_stats_/MakingAnagrams/cat_full_list.csv 	deleted:    anag_stats_/MakingAnagrams/group_1_word_pairs.csv 	deleted:    anag_stats_/MakingAnagrams/group_2_word_pairs.csv 	deleted:    anag_stats_/MakingAnagrams/group_3_word_pairs.csv 	deleted:    anag_stats_/MakingAnagrams/group_4_word_pairs.csv 	modified:   anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb 	modified:   anag_stats_/MakingAnagrams/new_file_maker.ipynb 	deleted:    anag_stats_/MakingAnagrams/possible_words.json 	deleted:    anag_stats_/MakingAnagrams/rand_full_list.js 	modified:   anag_stats_/MakingAnagrams/rand_full_list.json 	modified:   anag_stats_/MakingAnagrams/stimuli.js 	deleted:    anag_stats_/MakingAnagrams/updated_stimuli.js 	deleted:    anag_stats_/MakingAnagrams/word_list_review.csv 	deleted:    anag_stats_/experiment.html 	deleted:    anag_stats_/experiment.js 	deleted:    anag_stats_/experiment/.DS_Store 	deleted:    anag_stats_/experiment/anagramer/.DS_Store 	deleted:    anag_stats_/experiment/anagramer/experiment.css 	deleted:    anag_stats_/experiment/anagramer/jspysch/.DS_Store 	deleted:    anag_stats_/experiment/anagramer/jspysch/README.md 	deleted:    anag_stats_/experiment/anagramer/jspysch/VERSION.md 	deleted:    anag_stats_/experiment/anagramer/jspysch/code-of-conduct.md 	deleted:    anag_stats_/experiment/anagramer/jspysch/contributors.md 	deleted:    anag_stats_/experiment/anagramer/jspysch/core_js/jspsych.css 	deleted:    anag_stats_/experiment/anagramer/jspysch/core_js/jspsych.js 	deleted:    anag_stats_/experiment/anagramer/jspysch/core_js/plugin-browser-check.js 	deleted:    anag_stats_/experiment/anagramer/jspysch/core_js/plugin-call-function.js 	deleted:    anag_stats_/experiment/anagramer/jspysch/core_js/plugin-external-html.js 	deleted:    anag_stats_/experiment

--- a/anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb
+++ b/anag_stats_/MakingAnagrams/making_anagrams_refactor.ipynb
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "<spacy.lang.en.English at 0x17d1ae810>"
+       "<spacy.lang.en.English at 0x16ad34c80>"
       ]
      },
      "execution_count": 1,
@@ -83,6 +83,7 @@
     "    get_top_n_words,\n",
     "    shuffle_list,\n",
     "    reformat_sorted_wordlist,\n",
+    "    check_for_word,\n",
     "    check_for_doubles,\n",
     "    check_for_same,\n",
     "    find_valid_words\n",
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "71eeb548",
    "metadata": {},
    "outputs": [],
@@ -184,7 +185,9 @@
     "    \"id\" : [str(i+1).zfill(3) for i in range(len(full_list))]    \n",
     "})\n",
     "cat_full_list= check_for_doubles(cat_full_list) # we check for any words that are the same in the root and shuffled columns \n",
-    "cat_full_list= check_for_same(cat_full_list) # we check for any duplicates in the shuffled coll and reshuffle them"
+    "cat_full_list= check_for_same(cat_full_list) # we check for any duplicates in the shuffled coll and reshuffle them\n",
+    "## need to make a function that checks that words that are \"shuffled\" do not exist in the dictionary, then shuffle if they are\n",
+    "cat_full_list = check_for_word(cat_full_list, word_dict)"
    ]
   },
   {
@@ -199,19 +202,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "bccc3150",
    "metadata": {},
    "outputs": [],
    "source": [
     "valid_words_gram = [find_valid_words(word, word_dict) for word in shuffled_list] # we find the valid words for each anagram in the shuffled list\n",
     "valid_words = [list(set(words)) for words in valid_words_gram] # we remove any duplicates in the valid words list and set to just the one list\n",
-    "cat_full_list['valid_words'] = valid_words # we add the valid words to the df\n"
+    "cat_full_list['valid_words'] = valid_words # we add the valid words to the df\n",
+    "cat_full_list=check_for_word(cat_full_list, word_dict) # we check for any words that are the same in the root and shuffled columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "1c8039e3",
    "metadata": {},
    "outputs": [
@@ -223,22 +227,6 @@
       "SetB has 150 words\n",
       "SetC has 150 words\n",
       "SetD has 150 words\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Length of values (16) does not match length of index (600)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 61\u001b[0m\n\u001b[1;32m     58\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m df\n\u001b[1;32m     60\u001b[0m \u001b[38;5;66;03m# apply the function to the df\u001b[39;00m\n\u001b[0;32m---> 61\u001b[0m cat_full_list_wruns \u001b[38;5;241m=\u001b[39m set_run(cat_full_list)\n",
-      "Cell \u001b[0;32mIn[11], line 57\u001b[0m, in \u001b[0;36mset_run\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m     55\u001b[0m         set_runs_list\u001b[38;5;241m.\u001b[39mappend(group[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msample(frac\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mtolist())\n\u001b[1;32m     56\u001b[0m \u001b[38;5;66;03m# make a new column in the df and assign the set runs list to it\u001b[39;00m\n\u001b[0;32m---> 57\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mset_run\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m set_runs_list\n\u001b[1;32m     58\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m df\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/pandas/core/frame.py:4311\u001b[0m, in \u001b[0;36mDataFrame.__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   4308\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_setitem_array([key], value)\n\u001b[1;32m   4309\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   4310\u001b[0m     \u001b[38;5;66;03m# set column\u001b[39;00m\n\u001b[0;32m-> 4311\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_set_item(key, value)\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/pandas/core/frame.py:4524\u001b[0m, in \u001b[0;36mDataFrame._set_item\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   4514\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_set_item\u001b[39m(\u001b[38;5;28mself\u001b[39m, key, value) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   4515\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   4516\u001b[0m \u001b[38;5;124;03m    Add series to DataFrame in specified column.\u001b[39;00m\n\u001b[1;32m   4517\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   4522\u001b[0m \u001b[38;5;124;03m    ensure homogeneity.\u001b[39;00m\n\u001b[1;32m   4523\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 4524\u001b[0m     value, refs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sanitize_column(value)\n\u001b[1;32m   4526\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m   4527\u001b[0m         key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\n\u001b[1;32m   4528\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m value\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m   4529\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(value\u001b[38;5;241m.\u001b[39mdtype, ExtensionDtype)\n\u001b[1;32m   4530\u001b[0m     ):\n\u001b[1;32m   4531\u001b[0m         \u001b[38;5;66;03m# broadcast across multiple columns if necessary\u001b[39;00m\n\u001b[1;32m   4532\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mis_unique \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns, MultiIndex):\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/pandas/core/frame.py:5266\u001b[0m, in \u001b[0;36mDataFrame._sanitize_column\u001b[0;34m(self, value)\u001b[0m\n\u001b[1;32m   5263\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _reindex_for_setitem(value, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mindex)\n\u001b[1;32m   5265\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_list_like(value):\n\u001b[0;32m-> 5266\u001b[0m     com\u001b[38;5;241m.\u001b[39mrequire_length_match(value, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mindex)\n\u001b[1;32m   5267\u001b[0m arr \u001b[38;5;241m=\u001b[39m sanitize_array(value, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mindex, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, allow_2d\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m   5268\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m   5269\u001b[0m     \u001b[38;5;28misinstance\u001b[39m(value, Index)\n\u001b[1;32m   5270\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m value\u001b[38;5;241m.\u001b[39mdtype \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mobject\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   5273\u001b[0m     \u001b[38;5;66;03m# TODO: Remove kludge in sanitize_array for string mode when enforcing\u001b[39;00m\n\u001b[1;32m   5274\u001b[0m     \u001b[38;5;66;03m# this deprecation\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/pandas/core/common.py:573\u001b[0m, in \u001b[0;36mrequire_length_match\u001b[0;34m(data, index)\u001b[0m\n\u001b[1;32m    569\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    570\u001b[0m \u001b[38;5;124;03mCheck the length of data matches the length of the index.\u001b[39;00m\n\u001b[1;32m    571\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    572\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(data) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(index):\n\u001b[0;32m--> 573\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    574\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLength of values \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    575\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(data)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    576\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdoes not match length of index \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    577\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(index)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    578\u001b[0m     )\n",
-      "\u001b[0;31mValueError\u001b[0m: Length of values (16) does not match length of index (600)"
      ]
     }
    ],
@@ -277,7 +265,6 @@
     "    df['Set'] = group_list\n",
     "    return df\n",
     "\n",
-    "\n",
     "# apply the function to the df\n",
     "cat_full_list = group_by_length(cat_full_list)\n",
     "\n",
@@ -302,25 +289,17 @@
     "    # make a new column in the df and assign the set runs list to it\n",
     "    df['set_run'] = set_runs_list\n",
     "    return df\n",
-    "    \n",
-    "# apply the function to the df\n",
-    "cat_full_list_wruns = set_run(cat_full_list)\n"
+    "\n",
+    "#save the cat_full_list to a csv\n",
+    "cat_full_list.to_csv('cat_full_list.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "91d7d439",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#tester chunk\n",
     "print(type(cat_full_list))"
@@ -328,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "88fc5934",
    "metadata": {},
    "outputs": [],
