--- a/anag_stats_/MakingAnagrams/new_file_maker.ipynb
+++ b/anag_stats_/MakingAnagrams/new_file_maker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>have</td>\n",
-       "      <td>aehv</td>\n",
+       "      <td>veah</td>\n",
        "      <td>1</td>\n",
        "      <td>['have']</td>\n",
        "      <td>4</td>\n",
@@ -57,7 +57,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>about</td>\n",
-       "      <td>ubaot</td>\n",
+       "      <td>utabo</td>\n",
        "      <td>2</td>\n",
        "      <td>['about']</td>\n",
        "      <td>5</td>\n",
@@ -66,7 +66,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>people</td>\n",
-       "      <td>ppeleo</td>\n",
+       "      <td>eplepo</td>\n",
        "      <td>3</td>\n",
        "      <td>['people']</td>\n",
        "      <td>6</td>\n",
@@ -75,7 +75,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>will</td>\n",
-       "      <td>iwll</td>\n",
+       "      <td>wlli</td>\n",
        "      <td>4</td>\n",
        "      <td>['will']</td>\n",
        "      <td>4</td>\n",
@@ -84,7 +84,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>there</td>\n",
-       "      <td>ehter</td>\n",
+       "      <td>hrete</td>\n",
        "      <td>5</td>\n",
        "      <td>['ether', 'there', 'three']</td>\n",
        "      <td>5</td>\n",
@@ -96,27 +96,27 @@
       ],
       "text/plain": [
        "     root shuffled  id                  valid_words  length   Set\n",
-       "0    have     aehv   1                     ['have']       4  SetA\n",
-       "1   about    ubaot   2                    ['about']       5  SetA\n",
-       "2  people   ppeleo   3                   ['people']       6  SetA\n",
-       "3    will     iwll   4                     ['will']       4  SetA\n",
-       "4   there    ehter   5  ['ether', 'there', 'three']       5  SetA"
+       "0    have     veah   1                     ['have']       4  SetA\n",
+       "1   about    utabo   2                    ['about']       5  SetA\n",
+       "2  people   eplepo   3                   ['people']       6  SetA\n",
+       "3    will     wlli   4                     ['will']       4  SetA\n",
+       "4   there    hrete   5  ['ether', 'there', 'three']       5  SetA"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "full_list = pandas.read_csv('cat_full_list.csv')\n",
-    "full_list = full_list.drop('SetRun', axis=1)\n",
+    "#full_list = full_list.drop('SetRun', axis=1)\n",
     "full_list.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
      "output_type": "stream",
      "text": [
       "2400\n",
-      "{'id': '134', 'type': '5', 'anagram': 'lseta', 'correct': 'least', 'valid': \"['stale', 'steal', 'least', 'lates', 'stael', 'slate', 'tesla']\", 'set': 'SetA', 'setRun': 'SetA1'}\n"
+      "{'id': '131', 'type': '5', 'anagram': 'rtsoy', 'correct': 'story', 'valid': \"['story']\", 'set': 'SetA', 'setRun': 'SetA1'}\n"
      ]
     }
    ],
